--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "cookies": "^0.8.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -18,6 +19,7 @@
     "react-jwt": "^1.1.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
